Исправление ошибок в ветке Develop выявленных коллекцией тестов sprint12/add-marks